grammar.js
    source_file: ($) => repeat($._top_level_item),

    // top level only bits
    _top_level_item: ($) =>
      choice(
        $.struct_definition,
        $.function_definition,
        $.declaration,
        $.non_case_statement,
        $.preproc,
      ),

    // preproc bits
    // partially taken then modified from:
    interpolation_specifier: (_) =>
      choice(
        "flat",
        "smooth",
      ),

    _any_integer: (_) => /[+-]?(?:0x[a-f0-9]+|\d+)/i,
    unsigned_integer: ($) =>
      seq($._any_integer, token.immediate(choice("u", "U"))),
    signed_integer: ($) => $._any_integer,
    float: (_) => /[+-]?(?:\d+\.|\.\d)\d*(?:e[+-]\d+)?f?/i,
    primitive_type: (_) =>
      /void|bool|u?int|float|(?:[biu]?vec|mat)[2-4]|[iu]?sampler(?:2D(Array)?|3D)|sampler(?:Cube(?:Array)?|ExternalOES)/,
    identifier: (_) => /(r#)?[_\p{XID_Start}][_\p{XID_Continue}]*/,
    unary_expression: ($) => {
      const operators = field("operator", choice("+", "-", "~", "!"));
      return prec.left(
        PREC.UNARY,
        seq(
          field("operator", operators),
          field("argument", $.expression),
        ),
      );
    },
    update_expression: ($) => {
      const operators = field("operator", choice("--", "++"));
      const arg = field("argument", $.expression);
      return choice(
        prec.left(PREC.UNARY, seq(operators, arg)),
        prec.right(PREC.POST_INC_DEC, seq(arg, operators)),
      );
    },

    assignment_expression: ($) =>
      prec.right(
        PREC.ARITHMETIC_ASSIGNMENT,
        seq(
          field("left", $.assignable_expression),
          field(
            "operator",
            choice(
              "=",
              "*=",
              "/=",
              "%=",
              "+=",
              "-=",
              "<<=",
              ">>=",
              "&=",
              "^=",
              "|=",
            ),
          ),
          field("right", $.expression),
        ),
      ),

    binary_expression: ($) => {
      const table = [
        [PREC.LOGICAL_INCLUSIVE_OR, "||"],
        [PREC.LOGICAL_EXCLUSIVE_OR, "^^"],
        [PREC.LOGICAL_AND, "&&"],
        [PREC.BITWISE_INCLUSIVE_OR, "|"],
        [PREC.BITWISE_EXCLUSIVE_OR, "^"],
        [PREC.BITWISE_AND, "&"],
        [PREC.EQUALITY, choice("!=", "==")],
        [
          PREC.RELATIONAL,
          choice("<", "<=", ">", ">="),
        ],
        [PREC.BITWISE_SHIFT, choice("<<", ">>")],
        [PREC.ADDITIVE, choice("+", "-")],
        [PREC.MULTIPLICATIVE, choice("*", "/", "%")],
      ];

      return prec.left(choice(
        ...table.map(
          ([precedence, rule]) =>
            prec.left(
              precedence,
              seq(
                field("left", $.expression),
                field("operator", rule),
                field("right", $.expression),
              ),
            ),
        ),
      ));
    },

    parenthical_expression: ($) =>
      prec(PREC.PARENTHICAL_GROUP, seq("(", $.expression, ")")),
    subscript_expression: ($) =>
      prec(
        PREC.ARRAY_SUBSCRIPT,
        seq(
          field("argument", $.expression),
          "[",
          field("index", $.expression),
          "]",
        ),
      ),

    field_expression: ($) =>
      prec(
        PREC.STRUCTURE_FIELD,
        seq(
          field("argument", $.expression),
          repeat1(seq(field("operator", "."), field("field", $.identifier))),
        ),
      ),
    argument_list: ($) =>
      seq("(", optional(comma_seperated_rule($.expression)), ")"),
    call_expression: ($) =>
      prec(
        PREC.FUNCTION_CALL,
        seq(
          // NOTE: find better way to add array constructor support as this add a bunch of conflicts
          prec.right(
            seq(
              field("function", choice($.primitive_type, $.identifier)),
              field("size", repeat(seq("[", $.expression, "]"))),
            ),
          ),
          field("arguments", $.argument_list),
        ),
      ),

    comma_expression: ($) =>
      prec(
        PREC.SEQUENCE,
        // we explicitly require the comma to avoid parsing a single
        // expression as a comma expression
        seq(
          $.expression,
          repeat1(seq(field("operator", ","), $.expression)),
        ),
      ),

    compound_statement: ($) => seq("{", repeat($.block_item), "}"),
    expression_statement: ($) => seq(optional($.expression), ";"),
    if_statement: ($) =>
      prec.right(
        seq(
          "if",
          field("condition", $.parenthical_expression),
          choice(
            seq(
              field("consequence", $.statement),
              field("alternative", optional($.else_clause)),
            ),
          ),
        ),
      ),
    else_clause: ($) => seq("else", $.statement),
    while_statement: ($) =>
      seq(
        "while",
        field("condition", $.parenthical_expression),
        field("consequence", $.statement),
      ),
    do_statement: ($) =>
      seq(
        "do",
        field("consequence", $.statement),
        "while",
        field("condition", $.parenthical_expression),
        ";",
      ),
    for_statement: ($) =>
      prec.left(seq(
        "for",
        "(",
        // the first value is expected to be a declaration but we also accept expressions
        // so things like macros can be validly parsed if they actually declare a variable
        // (very niche use case but valid syntax - just not logical)
        field(
          "initializer",
          choice($.declaration, $.expression_statement),
        ),
        // unlike any other part in gdshader the comma operator is supported here meaning the following
        // is valid:
        //
        // for(;true, false;)
        //
        // See: https://github.com/godotengine/godot/issues/95451
        // TODO: replace with a dedicated rule to avoid future breakage related to the issue linked above
        field(
          "condition",
          optional(choice($.expression, $.comma_expression)),
        ),
        ";",
        field("update", optional($.expression)),
        ")",
        // unlike C, gdshader accepts any statement
        // so something like `for (;;) int a;` is actually valid
        field("consequence", optional($.statement)),
      )),
    return_statement: ($) =>
      seq("return", field("value", optional($.expression)), ";"),
    break_statement: (_) => seq("break", ";"),
    continue_statement: (_) => seq("continue", ";"),
    discard_statement: (_) => seq("discard", ";"),
    switch_statement: ($) =>
      seq(
        "switch",
        field("condition", $.parenthical_expression),
        field("block", $.compound_statement),
      ),
    case_statement: ($) =>
      prec.right(
        seq(
          choice(
            seq("case", field("value", choice($.identifier, $.number))),
            "default",
          ),
          ":",
          repeat(choice($.non_case_statement, $.declaration)),
        ),
      ),

    // TODO: fill with actual names
    _render_mode: ($) => alias($.identifier, $.render_mode),
    _shader_type: ($) => alias($.identifier, $.shader_type),

    shader_type_statement: ($) =>
      seq(
        "shader_type",
        $._shader_type,
        ";",
      ),

    render_mode_statement: ($) =>
      seq(
        "render_mode",
        comma_seperated_rule($._render_mode),
        ";",
      ),

    _type_spec: ($) =>
      seq(
        field("precision", optional($.precision_specifier)),
        field("type", $.type),
      ),
    declaration: ($) =>
      choice(
        $.variable_declaration,
        $.const_declaration,
        $.varying_declaration,
        $.uniform_declaration,
        $.group_uniforms_declaration,
      ),
    init_declarator: ($) =>
      seq(
        field("declarator", $._declarator_item),
        field("hint", optional($.type_hint)),
        field("operator", "="),
        field("value", $.initializer),
      ),
    _declarator_item: ($) => choice($.identifier, $.array_declarator),
    array_declarator: ($) =>
      seq(
        field("declarator", $._declarator_item),
        repeat1(seq("[", field("size", $.expression), "]")),
      ),
    initializer_list: ($) =>
      seq("{", comma_seperated_trailing_rule($.expression), "}"),

    parameter_declaration: ($) =>
      seq(
        field("parameter_qualifier", optional($.parameter_qualifier)),
        seq(
          $._type_spec,
          $.declarator,
        ),
      ),
    parameter_list: ($) =>
      seq(
        "(",
        optional(
          comma_seperated_rule(
            $.parameter_declaration,
          ),
        ),
        ")",
      ),

    type_specifier: ($) =>
      seq(
        field("type", $._type_spec),
        repeat(seq("[", field("size", $.expression), "]")),
      ),
    function_definition: ($) =>
      seq(
        field("type", $.type_specifier),
        field("declarator", $.identifier),
        field("parameters", $.parameter_list),
        field("block", $.compound_statement),
      ),
    // from: https://github.com/tree-sitter/tree-sitter-c/blob/ae19b676b13bdcc13b7665397e6d9b14975473dd/grammar.js#L1361
